--- a/CraftsmanFinder/CraftsmanFinder.Web/Areas/HomeOwner/Views/Profile/Index.cshtml
+++ b/CraftsmanFinder/CraftsmanFinder.Web/Areas/HomeOwner/Views/Profile/Index.cshtml
@@ -67,6 +67,10 @@
                                     <p class="card-text"><small class="text-muted">Created at: @job.Created.ToString("MMMM yyyy")</small></p>
                                     <div class="text-end mt-4">
                                         <a href="@Url.Action("JobRequestDetails", "JobRequest", new { id = job.Id })" class="btn btn-success">View</a>
+                                        @if (job.ApplicationUserId == @User.FindFirstValue(ClaimTypes.NameIdentifier))
+                                        {
+                                            <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal" data-jobid="@job.Id">Delete</button>
+                                        }
                                     </div>
                                 </div>
                             </div>
@@ -81,3 +85,48 @@
         </div>
     </div>
 </div>
+
+
+
+<!-- Delete Confirmation Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Delete Job Request</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this job request?
+            </div>
+            <div class="modal-footer">
+                <form method="post" id="deleteForm" action="">
+                    <input type="hidden" name="id" id="deleteJobId" />
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@section Scripts {
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var deleteModal = document.getElementById('deleteModal');
+            deleteModal.addEventListener('show.bs.modal', function (event) {
+                var button = event.relatedTarget; 
+                var jobId = button.getAttribute('data-jobid'); 
+                var deleteForm = document.getElementById('deleteForm');
+                var deleteJobId = document.getElementById('deleteJobId');
+
+                
+                deleteForm.action = `/HomeOwner/JobRequest/Delete/${jobId}`;
+                deleteJobId.value = jobId;
+            });
+        });
+    </script>
+
+
+}
