--- a/CraftsmanFinder/CraftsmanFinder.Web/Views/Shared/_dashboard.cshtml
+++ b/CraftsmanFinder/CraftsmanFinder.Web/Views/Shared/_dashboard.cshtml
@@ -86,6 +86,24 @@
                         </li>
 
                         <li class="nav-item">
+                            <a href="/Admin/Category/Index" class="nav-link">
+                                <i class="nav-icon fas fa-tags"></i>
+                                <p>
+                                    Categories
+                                </p>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a href="/Admin/Users/Index" class="nav-link">
+                                <i class="nav-icon fas fa-users"></i>
+                                <p>
+                                    Users management
+                                </p>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
                             <a href="/Identity/Account/Register" class="nav-link">
                                 <i class="nav-icon fas fa-user-plus"></i> 
                                 <p>
