--- a/CraftsmanFinder/CraftsmanFinder.Web/Views/Shared/_dashboard.cshtml
+++ b/CraftsmanFinder/CraftsmanFinder.Web/Views/Shared/_dashboard.cshtml
@@ -95,6 +95,14 @@
                         </li>
 
                         <li class="nav-item">
+                            <a href="/Admin/Review/Index" class="nav-link">
+                                <i class="nav-icon fas fa-check-circle"></i>
+                                <p>Review</p>
+                            </a>
+                        </li>
+
+
+                        <li class="nav-item">
                             <a href="/Admin/Users/Index" class="nav-link">
                                 <i class="nav-icon fas fa-users"></i>
                                 <p>
