--- a/CraftsmanFinder/CraftsmanFinder.Web/Views/Shared/_dashboard.cshtml
+++ b/CraftsmanFinder/CraftsmanFinder.Web/Views/Shared/_dashboard.cshtml
@@ -101,6 +101,13 @@
                             </a>
                         </li>
 
+                        <li class="nav-item">
+                            <a href="/Admin/JobRequest/Index" class="nav-link">
+                                <i class="nav-icon fas fa-briefcase"></i>
+                                <p>JobRequest</p>
+                            </a>
+                        </li>
+                     
 
                         <li class="nav-item">
                             <a href="/Admin/Users/Index" class="nav-link">
@@ -120,8 +127,16 @@
                             </a>
                         </li>
 
+                        <li class="nav-item">
+                            <a href="#" class="nav-link" data-toggle="modal" data-target="#exampleModal" style="opacity: 0.6;">
+                                <i class="nav-icon fas fa-flag"></i>
+                                 <p>User Reports</p>
+                                
+                            </a>
+                        </li>
 
-                      
+                       
+                       
                        
 
                 </nav>
@@ -129,6 +144,26 @@
             </div>
             <!-- /.sidebar -->
         </aside>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">"Coming soon..." </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>This feature is under development and will be available soon....</p>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
@@ -143,6 +178,7 @@
                     </div>
                 </div><!-- /.container-fluid -->
             </section>
+
 
             <!-- Main content -->
             <section class="content">
@@ -162,6 +198,7 @@
                         </div>
                     </div>
                     <div class="card-body">
+
                         @RenderBody()
                     </div>
                     <!-- /.card-body -->
