--- a/CraftsmanFinder/CraftsmanFinder.Web/Areas/HomeOwner/Views/Home/Index.cshtml
+++ b/CraftsmanFinder/CraftsmanFinder.Web/Areas/HomeOwner/Views/Home/Index.cshtml
@@ -31,15 +31,19 @@
                 <!-- Card for Category -->
                 <div class="col-lg-6 col-xxl-4 mb-5">
                     <div class="card bg-light border-0 h-100">
-                        <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4">
-                                <img src="\@category.Logo" alt="Category Icon" style="width: 40px; height: 40px;">
+                        <a href="/HomeOwner/Category/index/@category.Id" style="text-decoration: none; color: inherit;">
+                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4">
+                                    <img src="@category.Logo" alt="Category Icon" style="width: 40px; height: 40px;">
+                                </div>
+                                <h2 class="fs-4 fw-bold" style="text-decoration: underline;">@category.Name</h2>
+
+                                <p class="mb-0">@category.Description</p>
                             </div>
-                            <h2 class="fs-4 fw-bold">@category.Name</h2>
-                            <p class="mb-0">@category.Description</p>
-                        </div>
+                        </a>
                     </div>
                 </div>
+
             }
         </div>
     </div>
