--- a/CraftsmanFinder/CraftsmanFinder.Web/Areas/Admin/Views/JobRequest/Index.cshtml
+++ b/CraftsmanFinder/CraftsmanFinder.Web/Areas/Admin/Views/JobRequest/Index.cshtml
@@ -2,8 +2,8 @@
 @model IEnumerable<JobRequest>
 
 @{
-    ViewBag.PageTitle = "Reviews Management";
-    ViewBag.CardTitle = "All Reviews";
+    ViewBag.PageTitle = "JobRequest Management";
+    ViewBag.CardTitle = "All JobRequest";
 }
 
 <table class="table table-bordered">
