--- a/CraftsmanFinder/CraftsmanFinder.Web/Views/Shared/_dashboard.cshtml
+++ b/CraftsmanFinder/CraftsmanFinder.Web/Views/Shared/_dashboard.cshtml
@@ -53,7 +53,7 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="/Admin/Home/Index" class="brand-link">
-                <img src="/dashboard/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+                <img src="~/dashboard/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">AdminLTE 3</span>
             </a>
 
